# web_dev

./: Cargo.toml
hello_world/: Cargo.toml  Dioxus.toml
hot_dog/: Cargo.toml  README.md
hot_dog/src/: main.rs
rust_web/: Cargo.toml  Dioxus.toml
rust_web/src/components/: mod.rs
rust_web/src/views/: home.rs  mod.rs
