[workspace]
resolver = "2"
members = ["hot_dog"]

[workspace.dependencies]
# actix-web = "4.10.2"
dioxus = { version = "0.6.0" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
# reqwest = "0.12.15"
# serde = { version = "1.0.219", features = ["derive"] }
# serde_json = "1.0.140"
# tokio = { version = "1.44.1", features = ["full"] }
